[project]
name = "ccexport"
version = "0.1.0"
description = "Export Claude Code session logs to HTML/Markdown/Org/JSON"
authors = [
    { name = "@yosagi" }
]
license = "BSD-3-Clause"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "toml>=0.10.0",
    "mistune>=3.0.0",
    "jinja2>=3.0.0",
]

[project.scripts]
ccexport = "ccexport.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccexport"]

[tool.hatch.build.targets.wheel.force-include]
"src/ccexport/templates" = "ccexport/templates"

[tool.hatch.build.targets.sdist]
include = [
    "src/ccexport/**/*",
]
